# django-navtag

./: .gitignore  .travis.yml  CLAUDE.md  LICENSE  MANIFEST.in  README.rst  deploy.py  pyproject.toml  setup.cfg  setup.py  tox.ini
django_navtag/: test_settings.py
django_navtag/templates/navtag_tests/: base.txt  contact.txt  home-unset.txt  home.txt
django_navtag/templates/navtag_tests/context/: base.txt  home.txt
django_navtag/templates/navtag_tests/submenu/: apple.txt  banana.txt  base.txt  base_fruit.txt  home.txt
django_navtag/templates/navtag_tests/text/: base.txt  contact.txt  home.txt
django_navtag/templatetags/: navtag.py
django_navtag/tests/: __init__.py  navtag.py  settings.py  test_navtag.py
