[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-navtag"
version = "3.3.dev0"
description = "A simple Django navigation template tag"
readme = "README.rst"
authors = [
    {name = "Chris Beaven", email = "smileychris@gmail.com"},
]
license = {text = "MIT"}
keywords = ["django", "templates"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/SmileyChris/django-navtag"

[dependency-groups]
dev = [
    "tox",
    "tox-uv",
    "django",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "ruff",
    "coverage[toml]",
]
maintainer = [
    "zest.releaser[recommended]",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["django_navtag*"]
exclude = ["django_navtag.tests*"]

[tool.setuptools.package-data]
django_navtag = ["templates/**/*.txt"]

[tool.setuptools.exclude-package-data]
"*" = ["templates/navtag_tests/**"]

[tool.coverage.run]
source = ["django_navtag"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_navtag.tests.settings"
filterwarnings = "module"

[tool.zest-releaser]
tag-signing = true