[metadata]
name = django-navtag
version = 2.1.3
description = A simple Django navigation template tag
long_description = file: README.rst
author = Chris Beaven
author_email = smileychris@gmail.com
url = https://github.com/SmileyChris/django-navtag
keywords = django, templates
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Framework :: Django

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
maintainer =
    zest.releaser[recommended]
dev =
    tox
    django
    pytest
    pytest-django
test =
    pytest
    pytest-django
    pytest-cov

[bdist_wheel]
# Works in both Python 2 and Python 3
universal = 1

[coverage:run]
source = django_navtag

[zest.releaser]
tag-signing = yes

[tool:pytest]
DJANGO_SETTINGS_MODULE = django_navtag.tests.settings
filterwarnings = module
